# TSC

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  INSTALL-2016-08-01.md  INSTALL.md  README.md  build-and-run.sh  build-flatpak.sh  build-tsc.sh  install-build-dependencies.sh  install-flatpak-dependencies.sh  org.secretchronicles.TSC.json  run-tsc.sh  settings.sh  travis.sh
tsc/: CMakeLists.txt  Doxyfile  Rakefile  cmake_uninstall.cmake.in  config.hpp.in  generate_credits.rb  icon.rc  mruby_tsc_build_config.rb
tsc/cmake/modules/: FindCEGUI.cmake  FindFLAC.cmake  FindFreeImage.cmake  FindLibIntl.cmake  FindLibXmlPP.cmake  FindOGG.cmake  FindPCRE.cmake  FindRuby.cmake  FindSFML.cmake  FindVorbis.cmake  ProvideCEGUI.cmake  ProvideMRuby.cmake  ProvideTinyclipboard.cmake
tsc/data/editor/: level_items.xml  level_menu.xml  world_menu.xml
tsc/data/gui/fonts/: DejaVuSans-Bold.font  DejaVuSans-Regular.font  DejaVuSans-Regular.large.font  DejaVuSans-Regular.small.bold.font  DejaVuSans-Regular.small.font  DejaVuSansMono.font  DejaVuSansMono.small.font
tsc/data/gui/layouts/: box_question.layout  box_text.layout  debugtext.layout  editor.layout  game_console.layout  hud.layout  level_editor.layout  secret_area_message.layout  statictext.layout  world_editor.layout
tsc/data/gui/schemes/: TSC.scheme  TaharezLook.scheme
tsc/data/levels/: basic_cave.tsclvl  cave_1_upper.tsclvl  cruel_corridors.tsclvl  david_1.tsclvl  desert_break_in.tsclvl  dj_kirby_1.tsclvl  game_tutorial.tsclvl  gnarly_greens.tsclvl  lvl_1.tsclvl  lvl_2.tsclvl  lvl_5.tsclvl  lvl_8.tsclvl  marble_zone.tsclvl  marble_zone_b.tsclvl  marble_zone_c.tsclvl  quintus_3.tsclvl  quintus_5.tsclvl  quintus_5_sub.tsclvl  quintus_5_top.tsclvl  sadistic_scroller.tsclvl  skarfester_01.tsclvl  skarfester_02.tsclvl  skarfester_03.tsclvl  skarfester_04.tsclvl  skarfester_05.tsclvl  skarfester_05b.tsclvl  skarfester_06.tsclvl
tsc/data/music/land/: reunion_1.txt
tsc/data/music/story/: theme_1.txt  tutorial.txt
tsc/data/pixmaps/game/: hud_alex.settings  hud_itembox.settings  hud_jewel.settings
tsc/data/scripting/: main.rb
tsc/data/scripting/core/: print.rb
tsc/data/scripting/std/: all.rb  climbing_box.rb  giant_jewel_box.rb  switch.rb
tsc/data/translations/: Secretchronicles.pot  de.po  el.po  es.po  fi_FI.po  fr.po  it.po  nl.po  nn.po  pl.po  pt_BR.po  ru.po  tr.po  zh_TW.po
tsc/data/worlds/world_1/: layer.xml  world.xml
tsc/docs/: authors.txt  tscdoxy.css
tsc/docs/man/: tsc.6
tsc/docs/pages/: compile_on_lubuntu_16_10.md  conventions.md  translating.md
tsc/extras/: tsc.appdata.xml
tsc/extras/archlinux/: PKGBUILD  PKGBUILD.git  tsc.install
tsc/src/audio/: audio.cpp  audio.hpp  random_sound.cpp  random_sound.hpp  sound_manager.cpp  sound_manager.hpp
tsc/src/campaign/: campaign_loader.cpp  campaign_loader.hpp  campaign_manager.cpp  campaign_manager.hpp
tsc/src/core/: camera.cpp  camera.hpp  collision.cpp  collision.hpp  errors.cpp  errors.hpp  file_parser.cpp  file_parser.hpp  framerate.cpp  framerate.hpp  game_core.cpp  game_core.hpp  global_basic.hpp  global_game.hpp  i18n.cpp  i18n.hpp  main.cpp  main.hpp  obj_manager.hpp  property_helper.cpp  property_helper.hpp  sprite_manager.cpp  sprite_manager.hpp  xml_attributes.cpp  xml_attributes.hpp
tsc/src/core/editor/: editor-old.cpp  editor-old.hpp  editor.cpp  editor.hpp  editor_items_loader.cpp  editor_items_loader.hpp
tsc/src/core/filesystem/: filesystem.cpp  filesystem.hpp  package_manager.cpp  package_manager.hpp  relative.cpp  relative.hpp  (+2 more)
tsc/src/enemies/: army.cpp  army.hpp  beetle.cpp  beetle.hpp  beetle_barrage.cpp  beetle_barrage.hpp  doom_larry.cpp  doom_larry.hpp  eato.cpp  eato.hpp  enemy.cpp  enemy.hpp  flyon.cpp  flyon.hpp  furball.cpp  furball.hpp  gee.cpp  gee.hpp  krush.cpp  krush.hpp  larry.cpp  larry.hpp  pip.cpp  pip.hpp  rokko.cpp  rokko.hpp  shell.cpp  shell.hpp  spika.cpp  spika.hpp  spikeball.cpp  spikeball.hpp  static.cpp  static.hpp  thromp.cpp  thromp.hpp
tsc/src/gui/: game_console.cpp  game_console.hpp  generic.cpp  generic.hpp  hud.cpp  hud.hpp  hud_old.cpp  menu.cpp  menu.hpp  menu_data.cpp  menu_data.hpp
tsc/src/input/: joystick.cpp  joystick.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
tsc/src/level/: level.cpp  level.hpp  level_background.cpp  level_background.hpp  level_editor-old.cpp  level_editor-old.hpp  level_editor.cpp  level_editor.hpp  level_loader.cpp  level_loader.hpp  level_manager.cpp  level_manager.hpp  level_player.cpp  level_player.hpp  level_settings.cpp  level_settings.hpp
tsc/src/objects/: ball.cpp  ball.hpp  bonusbox.cpp  bonusbox.hpp  box.cpp  box.hpp  crate.cpp  crate.hpp  enemystopper.cpp  enemystopper.hpp  goldpiece.cpp  goldpiece.hpp  lava.cpp  lava.hpp  level_entry.cpp  level_entry.hpp  level_exit.cpp  level_exit.hpp  moving_platform.cpp  moving_platform.hpp  movingsprite.cpp  movingsprite.hpp  path.cpp  path.hpp  powerup.cpp  powerup.hpp  rescue_item.cpp  rescue_item.hpp  secret_area.cpp  secret_area.hpp  spinbox.cpp  spinbox.hpp  sprite.cpp  sprite.hpp  star.cpp  star.hpp  text_box.cpp  text_box.hpp
tsc/src/overworld/: overworld.cpp  overworld.hpp  overworld_description_loader.cpp  overworld_description_loader.hpp  overworld_layer_loader.cpp  overworld_layer_loader.hpp  overworld_loader.cpp  overworld_loader.hpp  world_editor-old.cpp  world_editor-old.hpp  world_editor.cpp  world_editor.hpp  world_layer.cpp  world_layer.hpp  world_manager.cpp  world_manager.hpp  world_player.cpp  world_player.hpp  world_sprite_manager.cpp  world_sprite_manager.hpp  world_waypoint.cpp  world_waypoint.hpp
tsc/src/scripting/: scriptable_object.cpp  scriptable_object.hpp  scripting.cpp  scripting.hpp
tsc/src/user/: preferences.cpp  preferences.hpp  preferences_loader.cpp  preferences_loader.hpp
tsc/src/video/: animation.cpp  animation.hpp  color.hpp  font.cpp  gl_surface.cpp  gl_surface.hpp  img_manager.cpp  img_manager.hpp  img_set.cpp  img_set.hpp  img_settings.cpp  img_settings.hpp  loading_screen.cpp  loading_screen.hpp  renderer.cpp  renderer.hpp  video.cpp  video.hpp
(+174 files in other folders)
